[package]
name = "android-binding-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android-binding-macros = { path = "./macros" }
android-binding-runtime = { path = "./runtime" }

[dev-dependencies]
mantle-utilities = { path = "../mantle" }
jni = "0.19.0"
serde = "1.0"
serde_json = "1.0"