[package]
name = "android-utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantle-utilities = { path = "../mantle" }
jni = "0.19.0"
log = "0.4.14"
once_cell = "1.18.0"
ctor = "0.1.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
http = []
mqtt = []