[package]
name = "ios-binding-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
ios-binding-macros = { path = "./macros" }
ios-binding-runtime = { path = "./runtime" }

[dev-dependencies]
mantle-utilities = { path = "../mantle" }
ios-utilities = { path = "../ios" }
serde = "1.0"
serde_json = "1.0"