[package]
name = "mantle-utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
num_cpus = "1.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8.1"
log = "0.4.14"
thiserror = "1.0.38"
reqwest = { version = "=0.11.4", features = ["json", "blocking", "cookies", "stream"], optional = true }
sled = "0.34.7"
bincode = "1.3.3"
lru = "0.10.0"
anyhow = "1.0.69"
paho-mqtt = { version = "0.12.1", optional = true }
url = "2.4.1"
confenc = { version = "0.1.0", path = "../confenc" }
magic-crypt = "3.1.12"
serde_yaml = "0.9.25"
js-sandbox = { version = "0.2.0-rc.1", git="https://github.com/Bromeon/js-sandbox", optional = true }
chrono = "0.4.19"
regex = "1.9.5"
zip-extract = { version = "0.1.2", optional = true }



[features]
http-impl = ["reqwest"]
mqtt-rust-impl = ["paho-mqtt"]
mqtt-impl = []
js = ["js-sandbox", "zip-extract"]
with_integrated_tests = []

[dev-dependencies]
tempfile = "3.5.0"
fake = { version = "2.5.0", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }
rand = "0.8.5"
httpmock = "0.6.8"
