[package]
name = "android-binding-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantle-utilities = { path = "../../mantle" }
android-utilities = { path = "../../android" }
jni = "0.19.0"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
