[package]
name = "confenc_crydec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.1", features = ["std"] }
rand = "0.8.5"
thiserror = "1.0.39"

[dev-dependencies]
proptest = "1.1.0"