[package]
name = "confenc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.109"
quote = "1.0.23"
proc-macro2 = "1.0.51"
config = { version = "0.13.3", default-features = false, features = ["yaml"] }

confenc_crydec = { path = "../crydec" }
